
Wednesday May 18th, 2016
========================

    Start playing around with libsodium and encrypted packets.

    Sketch out token structure, connection request packet, generate tokens etc.

    Implement token encrypt.

    Implement token decrypt.

    Implement token comparison.

    Verify decrypted token matches original token.

    Passes!


Tuesday May 17th, 2016
======================

    Find a way to pass context into read and write packet functions.

    PacketInfo struct passed into all read/write functions makes it easy to extend packet read/write in future.

    Also, makes sure both read and write have access to the packet factory, which will be required.

    Converted all example programs over to use the new stuff.

    Also made packet factory destroy packet a virtual, so it can be overridden to create packets from a custom heap.

    This should cover the protocol2 for embedding as a library as it does no other dynamic allocations.


Monday May 16th, 2016
=====================

    Implement rate limiting for various packets sent

    Implement client-side timeouts

    Implement client re-rolls the client salt if no response to connection request within one second.

    Implement challenge response send rate.

    Implement server-side timeout of a client

    Extend client states to include all error states

    Implement disconnect packets

    Server-side handle disconnect packets.

    Implement code on client that handles connection request denied, both reasons.

    Convert yojimbo.cpp stuff to use allocator

    Fix up stupid nested namespaces for array::something_whatever => array_something_whatever

    Implement counters for socket interface.


Sunday May 15th, 2016
=====================

    Bunch of planning and work implementing the client/server.

    Network interface setup and client/server logic for packet exchange working.


Saturday May 14th, 2016
=======================
